test/expected/explain_v+f_v.out
explain virtual void C::f()
                     ^
22: error: "C::f": "virtual" can not be used in file-scoped functions
